--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,13 @@
 .app {
   display: grid;
   place-items: center;
-  background-color: #dadbd3;
+  background-color: #d1d1cd;
   height: 100vh ;
 }
 
 .app__body {
   display: flex;
-  background-color: #ededed;
+  background-color: #d6d6d6;
   margin-top: -50px;
   height: 90vh;
   width: 90vw;
