--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .app {
   display: grid;
   place-items: center;
-  background-color: #d1d1cd;
+  background-color: #ffffff;
   height: 100vh ;
 }
 
