--- a/src/Chat.css
+++ b/src/Chat.css
@@ -43,7 +43,7 @@
     margin-left: auto;
     background-color: #dcf8c6;
 }
-.chat__timestamp {
+.chat_timestamp {
    margin-left: 10px; 
    font-size: xx-small;
 }
