--- a/src/SidebarChat.css
+++ b/src/SidebarChat.css
@@ -1,19 +1,32 @@
-.sidebarChat {
+.sidebarChat{
     display: flex;
     padding: 20px;
     cursor: pointer;
     border-bottom: 1px solid #f6f6f6;
 }
 
-.sidebarChat:hover { 
-    background-color: #c0bcbc;
-
+.sidebarChat:hover{
+    background-color: #ebebeb;
 }
-.sidebarChat__info > h2 { 
+
+.sidebarChat_info > h2{
     font-size: 16px;
-    margin-bottom: 8px;
-
+    margin: 0px;
 }
-.sidebarChat__info { 
+
+.sidebarChat_info > p{
+    margin: 0px;
+}
+
+.sidebarChat_info{
     margin-left: 15px;
+}
+
+.add-new-chat-title{
+    margin: 0px 0px 0px 10px;
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
